--- a/stories_as_networks/styles.css
+++ b/stories_as_networks/styles.css
@@ -11,10 +11,9 @@ body {
 	transform: translate(0%,20%);
 	padding-right: 300px;
 	padding-left: 300px;
-}
-
-div.pg1 {
-    border-color: black;
+	border-style: double;
+	padding-top: 100;
+	padding-bottom: 100px;
 }
 
 #cursor {
