--- a/stories_as_networks/styles.css
+++ b/stories_as_networks/styles.css
@@ -22,7 +22,7 @@ body {
     width: 100px;
     height: 100px;
     transition: 0s;
-    transform: translate(0%,-20%);
+   //*transform: translate(0%,-20%);*/
 
 }
 
