--- a/stories_as_networks/styles.css
+++ b/stories_as_networks/styles.css
@@ -11,7 +11,7 @@ body {
 	padding-right: 300px;
 	padding-left: 300px;
 	border-style: double;
-	padding-top: 100;
+//*	padding-top: 100;*//
 }
 
 #cursor {
