--- a/stories_as_networks/styles.css
+++ b/stories_as_networks/styles.css
@@ -1,16 +1,180 @@
+
+
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 15px;
+	text-align: center;
 	display:flex;
 	justify-content: center;
 	flex-direction: column;
 	line-height: 1.4;
 	background-color:#B25252;
 	z-index: 2;
+	padding-top: 100px;
+	padding-left: 100px;
+	padding-right: 100px;
 	align-items: center;
-	transform: translate(0%,20%);
-	padding-right: 300px;
-	padding-left: 300px;
+	//*transform: translate(0%,20%);*//
+	/*padding-right: 300px;
+	padding-left: 300px;*//
+	border-style: double;
+	align-content: space-around;
+}
+
+div.page4{
+	display: flex;
+	flex-direction: column-reverse;
+	border-style: double;
+	padding-top: 100px;
+	padding-left: 100px;
+	padding-right: 100px;
+	padding-bottom: 100px;
+}
+
+div.page4:hover {
+	display: flex;
+	flex-direction: column;
+}
+
+div.p1{
+	border-style: double;
+	background-color: black;
+}
+
+div.p12{
+	border-style: double;
+}
+
+div.p2{
+	border-style: double;
+}
+div.p3{
+	border-style: double;
+}
+div.p4{
+	border-style: double;
+}
+div.p5{
+	border-style: double;
+	background-color: black;
+}
+div.p6{
+	border-style: double;
+}
+
+
+div.p1:hover {
+	color:white;
+}
+
+div.p5:hover {
+	color:white;
+}
+
+div.pa1{
+	border-style: double;
+}
+
+div.page5{
+	display: flex;
+	flex-direction: column;
+}
+
+div.page7{
+	display: flex;
+	flex-direction: row;
+}
+
+div.dialogue{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+h3{
+	border-style: double;
+	color: white;
+	opacity: 20%;
+}
+
+h4{
+	border-style: double;
+	color: black;
+	opacity: 20%;
+}
+
+div.head2{
+	border-style: double;
+	color: black;
+	opacity: 20%;
+}
+
+div.head2:hover{
+	opacity: 100%;
+	color: black;
+}
+
+div.head3{
+	border-style: double;
+	color: black;
+	opacity: 20%;
+}
+
+div.head3:hover{
+	opacity: 100%;
+	color: white;
+}
+
+div.head4{
+	border-style: double;
+	color: white;
+	opacity: 20%;
+}
+
+div.head4:hover{
+	opacity: 100%;
+	color: black;
+}
+
+div.head5{
+	border-style: double;
+	background-color: black;
+}
+
+div.head5:hover{
+	color:white;
+	font-size: 70px;
+}
+
+div.die{
+	color: #B25252;
+	font-size: 70px;
+}
+
+div.die:hover{
+	opacity: 100%;
+	color: black;
+	font-size: 12px;
+}
+
+div.head{
+	font-size: 70px;
+	text-align: left;
+	font-family: times new roman;
+}
+
+h3:hover{
+	font-size: 250%;
+	opacity: 100%;
+	color: black;
+	border-style: none;
+}
+
+h4:hover{
+	font-size: 250%;
+	opacity: 100%;
+	color: white;
+	border-style: none;
 }
 
 #cursor {
@@ -21,7 +185,7 @@ body {
     width: 100px;
     height: 100px;
     transition: 0s;
-    transform: translate(0%,-20%);
+    transform: translate(-50%,-50%);
 
 }
 
@@ -61,6 +225,10 @@ a{
 
 div.red{
 	color: #B25252;
+}
+
+span.red:hover {
+	font-size: 150%;
 }
 
 div.circle {
