--- a/The_Good_Life/stylestwo.css
+++ b/The_Good_Life/stylestwo.css
@@ -1,3 +1,42 @@
 body{
 	background-image: url(./images/kitchen_1.png);
+	display: flex;
+	flex-direction: row;
+}
+
+.object-container{
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+div.room{
+	font-family: Arial;
+	font-size: 30px;
+}
+
+a{
+	background-color: white;
+	color: red;
+}
+
+span{
+	background-color: white;
+	border: 1px solid red;
+}
+
+img{
+	width: 200px;
+	height: 200px;
+}
+
+h1{
+	font-family: Arial;
+	font-size: 20px;
+}
+
+h2{
+	font-family: Arial;
+	font-size: 10px;
 }
