--- a/ecosystem/styles.css
+++ b/ecosystem/styles.css
@@ -1,17 +1,23 @@
+html, body {
+    height: 100%;
+  }
+
 div.sounds{
+    position: fixed;
     font-weight: 200;
-    display: flex;
+    display: block;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: space-around;
     justify-content: center;
     align-items: center;
     align-content: space-around;
+    padding: 6rem;
     
 }
 
-
 div.uno{
+    z-index: inherit;
     display: flex;
     flex-direction: column;
     align-self: center;
@@ -33,8 +39,8 @@ div.cuatro{
 }
 
 button{
-    height: 3cm;
-    width: 3cm;
+    height: 2cm;
+    width: 2cm;
     background-color: rgb(15, 224, 26);
     border-style: dashed 1,1  black;
 }
@@ -42,3 +48,31 @@ button{
 button.pause{
     background-color: darkorange;
 }
+
+div.vid{
+    z-index: 2;
+}
+
+#small{
+    background-color: ivory;
+    border-radius: 3rem;
+}
+
+video {
+    position: fixed;
+    z-index: -1;
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+  }
+  
+.content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+  }
