--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,22 @@ h1{
 	font-size: 200px;
 }
 
+table{
+  border-collapse: collapse;
+}
+
+td, th {
+  text-align: left;
+  padding: 0px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+a img{
+  width: fit-content;
+}
 .p1 {
   color:#069; 
   cursor:pointer;
@@ -25,13 +41,6 @@ h1{
 }
 
 
-#me{
-  width: 60%;
-  left: 100px;
-  display: flex;
-  flex-direction: row;
-}
-
 #slides {
   left: 50px;
   list-style-type: none;
@@ -40,47 +49,4 @@ h1{
 
 .slide {
   display: none;
-}
-
-@keyframes rotation {
-  from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(361deg);
-    }
-}
-
-.prev
-{
-  cursor: pointer;
-  position: absolute;
-  top: 20%;
-  width: auto;
-  padding: 16px;
-  color: rgb(190, 10, 10);
-  font-weight: bold;
-  font-size: 30px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-  margin-top: 5px;
-  z-index: 3;
-}
-
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 20%;
-  left: 510px;
-  width: auto;
-  padding: 16px;
-  color: rgb(190, 10, 10);
-  font-weight: bold;
-  font-size: 30px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-  margin-top: 5px;
-  z-index: 3;
 }
