--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,28 @@ h1{
 	font-size: 200px;
 }
 
+.navigation{
+  display: flex;
+  flex-direction: column;
+}
+
+#row1{
+  display: flex;
+  flex-direction: row;
+}
+
+#row2{
+  display: flex;
+  flex-direction: row;
+}
+
+#row3{
+  display: flex;
+  flex-direction: row;
+}
+
+
+
 table{
   border-collapse: collapse;
 }
@@ -24,9 +46,6 @@ td, th {
   padding-right: 40px;
 }
 
-a img{
-  width: fit-content;
-}
 .p1 {
   color:#069; 
   cursor:pointer;
