--- a/websprite/styless2.css
+++ b/websprite/styless2.css
@@ -31,9 +31,14 @@ body{
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-#posters{
+.posters{
   display: flex;
   flex-direction: row;
+}
+
+.proj4{
+  display: flex;
+  flex-direction: column;
 }
 
 .head{
