--- a/websprite/inone.css
+++ b/websprite/inone.css
@@ -1,3 +1,13 @@
 body{
     background-color: white;
 }
+
+.inone{
+    display: flex;
+    flex-direction: column;
+}
+
+#slides{
+    display: flex;
+    flex-direction: row;
+}
