--- a/websprite/styleslou.css
+++ b/websprite/styleslou.css
@@ -17,29 +17,30 @@ html {
 .all{
   display: flex;
   flex-direction: column;
-  width: 1200px;
-  max-width: calc(100% - 20px);
-  margin: 20px auto;
-  padding: 10px;
 }
 
 
 .buttons{
-  width: 100%;
-  padding: 20%;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
+  padding: 5%;
+  align-items: center;
 }
 
 .projects{
-  height: 400px; 
+  height: 600px; 
   width: 100%;
   padding: 5%;
   background: url(./images/background.gif);
 }
 
+.contact{
+  display: flex;
+  flex-direction: column;
+}
+
 iframe{
-  height: 400px;
+  height: 600px;
   width: 100%;
 }
 
@@ -47,10 +48,11 @@ iframe{
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 5%;
 }
 
 #vid{
-  width: 200px;
+  width: 100px;
 }
 
 
