--- a/websprite/styleslou.css
+++ b/websprite/styleslou.css
@@ -21,7 +21,15 @@ h1{
     font-size: 30px;
     line-height: 147.91%;
     display: flex;
-    letter-spacing: -0.03em;
+    letter-spacing: 0.10em;
+    display: flex;
+    
+}
+
+.title{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .all{
@@ -35,6 +43,7 @@ h1{
   justify-content: center;
   padding: 5%;
   align-items: center;
+  align-content: space-around;
 }
 
 .projects{
@@ -114,5 +123,9 @@ iframe{
 }
 
 #resume{
+  display: none;
+}
+
+#motion{
   display: none;
 }
