--- a/websprite/styless2.css
+++ b/websprite/styless2.css
@@ -26,7 +26,7 @@ body{
 
 .motion{
   display: flex;
-  justify-content: center;
+  align-items: center;
 }
 
 /* On hover, add a black background color with a little bit see-through */
