--- a/book/caps.css
+++ b/book/caps.css
@@ -5,3 +5,11 @@ a{
     padding-left: 2%;
     font-size: 30px;
 }
+
+h1{
+    text-align: center;
+    font-size: 1em;
+    margin: 0;
+    font-kerning: normal;
+
+}
