--- a/book/caps.css
+++ b/book/caps.css
@@ -8,8 +8,10 @@ a{
 
 h1{
     text-align: center;
-    font-size: 1em;
+    font-size: 12px;
     margin: 0;
     font-kerning: normal;
-
+    font-style: normal;
+    font-weight: 200;
+    font-family: Arial, Helvetica, sans-serif;
 }
