--- a/websprite/newest.css
+++ b/websprite/newest.css
@@ -1,4 +1,14 @@
 h1{
     font-family: 'Lora', serif;
+    font-size:large;
+}
+
+h2{
+    font-family: 'Lora', serif;
+    font-size: medium;
+}
+
+h3{
+    font-family: 'Lora', serif;
     font-size: medium;
 }
