--- a/websprite/styless2.css
+++ b/websprite/styless2.css
@@ -1,3 +1,16 @@
+html {
+  font-size: 100%;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-img-size-adjust: 100%;
+  /* 2 */
+  -ms-img-size-adjust: 100%;
+  /* 2 */
+}
+
 body{
   background-color: white;
 }
