--- a/websprite/styless2.css
+++ b/websprite/styless2.css
@@ -33,8 +33,13 @@ body{
   }
 
  h1{
+   font-family: Helvetica, sans-serif;
     font-size: 1.5em;
     margin: 0.83em 0;
+ }
+
+ h2{
+   font-family: Helvetica, sans-serif;
  }
 
 .motion{
