--- a/websprite/styless2.css
+++ b/websprite/styless2.css
@@ -42,6 +42,12 @@ body{
    font-family: Helvetica, sans-serif;
  }
 
+
+.newestproj{
+object-fit: contain;
+} 
+
+
 .motion{
   display: flex;
   flex-direction: column;
