--- a/websprite/newest.css
+++ b/websprite/newest.css
@@ -25,3 +25,22 @@ h3{
     font-family: 'Lora', serif;
     font-size: medium;
 }
+
+.butt{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+    justify-content: center;
+    padding-top: 100px;
+}
+
+
+.butt1, .butt2, .butt3{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+
+
