--- a/websprite/newest.css
+++ b/websprite/newest.css
@@ -33,11 +33,15 @@ h3{
     height: auto;
     gap: 10px;
     justify-content: center;
-    padding-top: 50px;
+    padding-top: 30px;
 }
 
 .intro{
     padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 
