--- a/websprite/lou/louphoria.css
+++ b/websprite/lou/louphoria.css
@@ -29,6 +29,10 @@ body{
     flex: 50%;
 }
 
+.overlay{
+    mix-blend-mode:exclusion;
+}
+
 h1{
     position: fixed;
 }
@@ -54,7 +58,6 @@ a{
 
 img {
     margin: 50px;
-    width: 50%;
     height: auto;
 } 
 
@@ -80,6 +83,19 @@ img {
     height: auto;
 }
 
+.image3{
+    margin-top: 10%;
+    margin-left: 20%;
+    width: 60%;
+    height: auto;
+}
+
+.imagesniki{
+    display: flex;
+    flex-direction: row;
+    width: 40%;
+    z-index: -1;
+}
 .sub{
     position: sticky;
     top: 80px;
@@ -109,5 +125,29 @@ img {
     position: sticky;
     top: 400px;
     margin-left: 20%;
+    padding: 5px;
+}
+
+.projux1{
+    position: sticky;
+    top: 200px;
+    display: flex;
+    margin-left: 0%;
+    padding: 5px;
+}
+
+.projux2{
+    position: sticky;
+    top: 400px;
+    display: flex;
+    margin-left: 82%;
+    padding: 5px;
+}
+
+.projux3{
+    position: sticky;
+    top: 500px;
+    display: flex;
+    margin-left: 82%;
     padding: 5px;
 }
