--- a/websprite/lou/louphoria.css
+++ b/websprite/lou/louphoria.css
@@ -169,7 +169,7 @@ img {
     display: none;
 }
 
-@media screen and (max-width: 800px) {
+@media only screen and (max-width: 768px) {
 
     img{
         margin: 0px;
@@ -182,6 +182,7 @@ img {
     .titleColumn {
         display: none;
     }
+    
     .phone {
         margin: 0px;
         display: flex;
@@ -194,6 +195,7 @@ img {
     h3{
         font-size:xx-large;
     }
+
     h4{
         font-size: larger;
         text-align: right;
