--- a/websprite/lou/louphoria.css
+++ b/websprite/lou/louphoria.css
@@ -30,7 +30,7 @@ body{
 }
 
 .overlay{
-    mix-blend-mode:exclusion;
+    
 }
 
 h1{
@@ -111,7 +111,6 @@ img {
     display: flex;
     align-self: center;
     padding: 5px;
-    background-color: white;
 }
 
 .proj1{
@@ -119,7 +118,7 @@ img {
     top:80px;
     display: flex;
     flex-direction: row;
-    align-self: self-start;
+    align-self: self-end;
     background-color: white;
     font-size:larger;
 }
@@ -127,10 +126,8 @@ img {
 .proj2{
     position: sticky;
     top: 120px;
-    align-self:self-start;
-    padding-left: 50px;
+    align-items:center;
     padding: 5px;
-    background-color: white;
 }
 
 .proj3{
@@ -171,6 +168,14 @@ img {
 
 .phonecont{
     display: none;
+}
+
+h5{
+    position: sticky;
+    font-size: larger;
+    font-weight:900;
+    font-family: vcr;
+    src: url(VCR\ OSD\ Mono.ttf); 
 }
 
 
