--- a/websprite/lou/louphoria.css
+++ b/websprite/lou/louphoria.css
@@ -109,7 +109,7 @@ img {
     position: sticky;
     top: 80px;
     display: flex;
-    align-self: center;
+    align-self:flex-start;
     padding: 5px;
 }
 
@@ -118,9 +118,8 @@ img {
     top:80px;
     display: flex;
     flex-direction: row;
-    align-self: self-end;
+    align-self:flex-start;
     background-color: white;
-    font-size:larger;
 }
 
 .proj2{
