--- a/websprite/lou/louphoria.css
+++ b/websprite/lou/louphoria.css
@@ -12,6 +12,8 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+
+
 .title {
     display: flex;
     flex-direction: row;
@@ -19,6 +21,12 @@ body{
     mix-blend-mode: difference;
     color: rgb(0, 0, 0);
     z-index: 2;
+}
+
+.loulou {
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
 }
 
 .selected{
@@ -55,11 +63,6 @@ a{
     margin-top: 250px;
 }
 
-
-img {
-    margin: 50px;
-    height: auto;
-} 
 
 .image2{
     margin-top: 20%;
@@ -188,6 +191,9 @@ footer{
     text-align-last: center;
 }
 
+
+
+
 @media only screen and (max-width: 768px) {
 
     img{
@@ -248,6 +254,10 @@ footer{
     }
     
     .projux1{
+        display: none;
+    }
+
+    .loulou{
         display: none;
     }
 }
