--- a/websprite/lou/louphoria.css
+++ b/websprite/lou/louphoria.css
@@ -191,9 +191,13 @@ h5{
     src: url(VCR\ OSD\ Mono.ttf); 
 }
 
-footer{
+.footer{
     text-align-last: center;
+    display: flex;
+    flex-direction: column;
     margin-top: 100px;
+    margin-left: 50%;
+    margin-right: 50%;
 }
 
 
